style(about): fix gap in sections

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -259,7 +259,7 @@ ul.task-list input[type="checkbox"] {
 
 .post article h2 {
   margin-top: 32px;
-  margin-bottom: 0.5rem;
+  margin-bottom: 0rem;
 }
 
 // Skills grid
